--- a/html/include/header.html
+++ b/html/include/header.html
@@ -1,9 +1,16 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<meta charset="UTF-8">
-		<title></title>
-	</head>
-	<body>
-	</body>
-</html>
+
+<div class="out">
+	<div class="logo"><a href="#"><img src="images/logo.jpg"/></a></div>
+	<ul>
+		<li>商城</li>
+		<li>手机</li>
+		<li>配件</li>
+		<li>摄影</li>
+		<li>服务</li>
+		<li>体验店</li>
+		<li>社区</li>
+		<li>Nubia UI</li>
+		<li><i class="iconfont icon-wodeweixuanzhong"></i></li>
+	</ul>
+	<div class="cart">购物车<i class="iconfont icon-licai2"></i></div>
+</div>
