首页头尾部

--- a/html/include/header.html
+++ b/html/include/header.html
@@ -1,9 +1,20 @@
 
 <div class="out">
 	<div class="logo"><a href="#"><img src="images/logo.jpg"/></a></div>
-	<ul>
+	<ul class="guide">
 		<li>商城</li>
-		<li>手机</li>
+		<li class="cellphone">手机
+			<!--<div class="container">
+				<ul class="z17list">
+					<li>
+						<a href="#">
+							<img src="images/149622421740.png"/>
+							<span>Z17S全面屏</span>
+						</a>
+					</li>
+				</ul>
+			</div>-->
+		</li>
 		<li>配件</li>
 		<li>摄影</li>
 		<li>服务</li>
