首页基本完成

--- a/html/include/header.html
+++ b/html/include/header.html
@@ -4,7 +4,7 @@
 	<ul class="guide">
 		<li>商城</li>
 		<li class="cellphone">手机
-			<!--<div class="container">
+			<div id="z17box">
 				<ul class="z17list">
 					<li>
 						<a href="#">
@@ -12,16 +12,139 @@
 							<span>Z17S全面屏</span>
 						</a>
 					</li>
+					<li>
+						<a href="#">
+							<img src="images/149622421740.png"/>
+							<span>Z17S全面屏</span>
+						</a>
+					</li>
+					<li>
+						<a href="#">
+							<img src="images/149622421740.png"/>
+							<span>Z17S全面屏</span>
+						</a>
+					</li>
+					<li>
+						<a href="#">
+							<img src="images/149622421740.png"/>
+							<span>Z17S全面屏</span>
+						</a>
+					</li>
+					<li>
+						<a href="#">
+							<img src="images/149622421740.png"/>
+							<span>Z17S全面屏</span>
+						</a>
+					</li>
 				</ul>
-			</div>-->
+			</div>
 		</li>
-		<li>配件</li>
-		<li>摄影</li>
+		<li class="fitting">配件
+			<div id="fitbox">
+				<ul>
+					<li>
+						<a href="#">
+							<i class="iconfont icon-shoujichongzhi1"></i>
+							<span>保护壳</span>
+						</a>
+					</li>
+					<li>
+						<a href="#">
+							<i class="iconfont icon-shoujichongzhi1"></i>
+							<span>皮套</span>
+						</a>
+					</li>
+					<li>
+						<a href="#">
+							<i class="iconfont icon-shoujichongzhi1"></i>
+							<span>贴膜</span>
+						</a>
+					</li>
+					<li>
+						<a href="#">
+							<i class="iconfont icon-shoujichongzhi1"></i>
+							<span>耳机</span>
+						</a>
+					</li>
+					<li>
+						<a href="#">
+							<i class="iconfont icon-shoujichongzhi1"></i>
+							<span>数据线/充电器</span>
+						</a>
+					</li>
+				</ul>
+			</div>
+		</li>
+		<li class="photograph">摄影
+			<div id="photobox">
+				<ul>
+					<li>
+						<a href="#">
+							<i class="iconfont icon-shoujichongzhi1"></i>
+							<span>努比亚摄影引擎</span>
+						</a>
+					</li>
+					<li>
+						<a href="#">
+							<i class="iconfont icon-shoujichongzhi1"></i>
+							<span>摄影长廊</span>
+						</a>
+					</li>
+					<li>
+						<a href="#">
+							<i class="iconfont icon-shoujichongzhi1"></i>
+							<span>延时摄影</span>
+						</a>
+					</li>
+					<li>
+						<a href="#">
+							<i class="iconfont icon-shoujichongzhi1"></i>
+							<span>星空之约</span>
+						</a>
+					</li>
+				</ul>
+			</div>
+		</li>
 		<li>服务</li>
 		<li>体验店</li>
 		<li>社区</li>
-		<li>Nubia UI</li>
-		<li><i class="iconfont icon-wodeweixuanzhong"></i></li>
+		<li class="nbui">Nubia UI
+			<div id="nbuibox">
+				<ul>
+					<li>
+						<a href="#">
+							<img src="images/nubiaui-logo.png"/>
+							<span>nubia UI 5.0</span>
+						</a>
+					</li>
+					<li>
+						<a href="#">
+							<i class="iconfont icon-shoujichongzhi1"></i>
+							<span>ROM下载</span>
+						</a>
+					</li>
+					<li>
+						<a href="#">
+							<i class="iconfont icon-shoujichongzhi1"></i>
+							<span>UI社区</span>
+						</a>
+					</li>
+					<li>
+						<a href="#">
+							<i class="iconfont icon-shoujichongzhi1"></i>
+							<span>云服务</span>
+						</a>
+					</li>
+					<li>
+						<a href="#">
+							<i class="iconfont icon-shoujichongzhi1"></i>
+							<span>应用</span>
+						</a>
+					</li>
+				</ul>
+			</div>
+		</li>
+		<li><a href="html/login.html"><i class="iconfont icon-wodeweixuanzhong"></i></a></li>
 	</ul>
 	<div class="cart">购物车<i class="iconfont icon-licai2"></i></div>
 </div>
