--- a/sass/header.scss
+++ b/sass/header.scss
@@ -6,6 +6,7 @@ fieldset,legend, input, button, textarea, p, blockquote,
  
  @charset "UTF-8";
 .out{
+    position: relative;
     width: 100%;
     height: 67px;
     background: #282828; 
@@ -22,7 +23,7 @@ fieldset,legend, input, button, textarea, p, blockquote,
         width: 69%;
         justify-content: space-around;
         li{
-            position: relative;
+            
             font-size: 13px;
             line-height: 67px;
             color: #ffffff;
@@ -41,9 +42,8 @@ fieldset,legend, input, button, textarea, p, blockquote,
             }
             div{
                 position: absolute;
-                top: 118%;
-                left: -280px;
-                width: 3874%;
+                top: 100%;
+                left: 0;
                 height: 240px;
                 overflow: hidden;
                 z-index: 999;
@@ -78,20 +78,16 @@ fieldset,legend, input, button, textarea, p, blockquote,
                 }
             }
             #fitbox{
-                left: -355px;
                 i{
                     font-size: 55px;
                 }
             }
             #photobox{
-                left: -428px;
                 i{
                     font-size: 55px;
                 }
             }
             #nbuibox{
-                left: -737px;
-                width: 1992%;
                 a{
                     img{
                         width: 75px;
