--- a/html/include/footer.html
+++ b/html/include/footer.html
@@ -49,7 +49,7 @@
 			<li><a href="#">社区</a></li>
 			<li><a href="#">新浪微博</a></li>
 			<li><a href="#">QQ空间</a></li>
-			<li id="weix"><a href="#">微信</a><div class="qrcodepic"><img src="images/nb-weixin-code-figure.jpg"/></div></li>
+			<li id="weix"><a href="#">微信</a><div class="qrcodepic"><img src="/images/nb-weixin-code-figure.jpg"/></div></li>
 			<li><a href="#">百度贴吧</a></li>
 		</ul>
 		<ul>
@@ -61,25 +61,25 @@
 	</div>
 	<div class="copyright">
 		<div class="ftlogo">
-			<a href="#"><img src="images/nubia-logo-x2.png" /></a>
+			<a href="#"><img src="/images/nubia-logo-x2.png" /></a>
 		</div>
 		<div class="icon">
 			<span><a href="#"><i class="iconfont icon-weibo2"></i></a></span>
-			<span id="QRcode"><div class="qrcodepic"><img src="images/nb-weixin-code-figure.jpg"/></div><a href="#"><i class="iconfont icon-weixin1"></i></a></span>
+			<span id="QRcode"><div class="qrcodepic"><img src="/images/nb-weixin-code-figure.jpg"/></div><a href="#"><i class="iconfont icon-weixin1"></i></a></span>
 			<span><a href="#"><i class="iconfont icon-erji1"></i></a></span>
 		</div>
 		<div class="notice">
 			<p>2012-2017 努比亚技术有限公司 版权所有 粤ICP备10006213号-2 </p>
 			<p>
-				<a href="#"><img src="images/57fc5f6def76275.jpg" /></a>ICP经营许可证编号：粤B2-20120688
-				<a href="#"><img src="../../images/57c5599015f1558.png" /></a>粤公网安备 44030502000309号 </p>
+				<a href="#"><img src="/images/57fc5f6def76275.jpg" /></a>ICP经营许可证编号：粤B2-20120688
+				<a href="#"><img src="/images/57c5599015f1558.png" /></a>粤公网安备 44030502000309号 </p>
 			<ul class="join">
 				<li><a href="#">加入我们</a> -</li>
 				<li><a href="#">公益</a> -</li>
 				<li><a href="#">星空之约</a> -</li>
 				<li><a href="#">加入我们</a> -</li>
 				<li>
-					<a href="#"><img src="images/flag.jpg" />简体中文</a>
+					<a href="#"><img src="/images/flag.jpg" />简体中文</a>
 				</li>
 			</ul>
 		</div>
