--- a/html/include/header.html
+++ b/html/include/header.html
@@ -1,6 +1,6 @@
 
 <div class="out">
-	<div class="logo"><a href="#"><img src="images/logo.jpg"/></a></div>
+	<div class="logo"><a href="#"><img src="/images/logo.jpg"/></a></div>
 	<ul class="guide">
 		<li>商城</li>
 		<li class="cellphone">手机
@@ -8,31 +8,31 @@
 				<ul class="z17list">
 					<li>
 						<a href="#">
-							<img src="images/149622421740.png"/>
+							<img src="/images/149622421740.png"/>
 							<span>Z17S全面屏</span>
 						</a>
 					</li>
 					<li>
 						<a href="#">
-							<img src="images/149622421740.png"/>
+							<img src="/images/149622421740.png"/>
 							<span>Z17S全面屏</span>
 						</a>
 					</li>
 					<li>
 						<a href="#">
-							<img src="images/149622421740.png"/>
+							<img src="/images/149622421740.png"/>
 							<span>Z17S全面屏</span>
 						</a>
 					</li>
 					<li>
 						<a href="#">
-							<img src="images/149622421740.png"/>
+							<img src="/images/149622421740.png"/>
 							<span>Z17S全面屏</span>
 						</a>
 					</li>
 					<li>
 						<a href="#">
-							<img src="images/149622421740.png"/>
+							<img src="/images/149622421740.png"/>
 							<span>Z17S全面屏</span>
 						</a>
 					</li>
@@ -113,7 +113,7 @@
 				<ul>
 					<li>
 						<a href="#">
-							<img src="images/nubiaui-logo.png"/>
+							<img src="/images/nubiaui-logo.png"/>
 							<span>nubia UI 5.0</span>
 						</a>
 					</li>
