--- a/sass/footer.scss
+++ b/sass/footer.scss
@@ -2,7 +2,7 @@ html,body, div, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, code, form,
 fieldset,legend, input, button, textarea, p, blockquote,
  th, td { margin: 0;padding: 0; box-sizing:border-box;}
  ul li{list-style: none;}
- a:hover{text-decoration: none;}
+ a{text-decoration: none;}
 .ft{
     width: 100%;
     height: 662px;
