--- a/html/include/header.html
+++ b/html/include/header.html
@@ -2,7 +2,7 @@
 <div class="out">
 	<div class="logo"><a href="#"><img src="/images/logo.jpg"/></a></div>
 	<ul class="guide">
-		<li>商城</li>
+		<li><a href="/html/list.html">商城</a></li>
 		<li class="cellphone">手机
 			<div id="z17box">
 				<ul class="z17list">
