--- a/sass/list.scss
+++ b/sass/list.scss
@@ -2,27 +2,56 @@
 .carousel_nav{
     width: 100%;
     height: 520px;
-    >div{
-        float: left;
-    }
+    position: relative;
     .nav{
-        width: 30%;
+        width: 20%;
         height: 100%;
-        background: #006699;
-        >ul{
+        position: absolute;
+        left: 10%;
+        top: 0;
+        background: #e5ebf3;
+        z-index: 99;
+        opacity: 0.9;
+        ul{
             width: 100%;
             height: 100%;
             padding: 10px 0;
             li{
                 width: 100%;
                 height: 12.5%;
-                
+                text-align: center;
+                line-height: 62px;
+                cursor: pointer;
+                &:hover{
+                    color: #f25c4a;
+                    background: #FFFFFF;
+                }
             }
         }
+        
     }
-    .carousel{
-        width: 70%;
+    .carousel_my{
+        width: 100%;
         height: 100%;
         background: #008000;
+        #myCarousel{
+            .carousel-indicators{
+                li{
+                    background: #999999;
+                }
+                .active{
+                    border: 3px solid #E8340E;
+                    background: none;
+                }
+            }
+            .carousel-inner{
+                a{
+                    img{
+                        width: 100%;
+                        height: 520px;
+                    }
+                }
+            }
+        }
     }
 }
