--- a/sass/list.scss
+++ b/sass/list.scss
@@ -1,4 +1,9 @@
-
+a{
+    text-decoration: none;
+}
+body{
+    background: #f4f3ef;
+}
 .carousel_nav{
     width: 100%;
     height: 520px;
@@ -55,3 +60,243 @@
         }
     }
 }
+
+
+.mall{
+    width: 100%;
+    height: 180px;
+    margin-top: 10px;
+    display: flex;
+    .change_left{
+        width: 20%;
+        height: 100%;
+        >ul{
+            width: 100%;
+            height: 100%;
+            display: flex;
+            flex-flow: wrap;
+            li{
+                width: 33.3%;
+                height: 50%;
+                text-align: center;
+                
+                a{
+                    text-decoration: none;
+                    width: 100%;
+                    height: 100%;
+                    color: #555555;
+                    display: flex;
+                flex-flow: column;
+                justify-content: center;
+                    span{
+                        font-size: 12px;
+                    }
+                    i{
+                        font-size: 32px;
+                    }
+                }
+                &:hover{
+                    background: #f35c49;
+                    a{
+                        color: #FFFFFF;
+                    }
+                }
+                
+            }
+        }
+    }
+    .change_right{
+        width: 80%;
+        height: 100%;
+        display: flex;
+        justify-content: space-around;
+        >div{
+            width: 32%;
+            height: 100%;
+            img{
+                width: 100%;
+                height: 100%;
+            }
+        }
+    }
+}
+
+
+.main{
+    width: 100%;
+    .floor{
+        .title{
+            width: 100%;
+            height: 72px;
+            line-height: 72px;
+            padding-top: 10px;
+            display:flex;
+            justify-content:space-between;
+            h2{
+                font-size: 24px;
+            }
+            span{
+                float: right;
+                font-size: 12px;
+                a{
+                    color: #e8340e;
+                    &:hover{
+                        text-decoration: none;
+                    }
+                }
+            }
+        }
+        .hot_box{
+            width: 100%;
+            padding-top: 10px;
+            ul{
+                width: 100%;
+                height: 100%;
+                display: flex;
+                flex-flow: wrap;
+                justify-content: space-between;
+                align-content: space-between;
+                li{
+                    width: 24%;
+                    height: 100%;
+                    background: #f4f3f1;
+                    position: relative;
+                    .reduce{
+                        position: absolute;
+                        top: 5px;
+                        left: 5px;
+                        width: 45px;
+                        height: 45px;
+                        border-radius: 50%;
+                        background: #f35c49;
+                        text-align: center;
+                        color: #FFFFFF;
+                        a{
+                            color: #FFFFFF;
+                        }
+                    }
+                    dl{
+                        width: 100%;
+                        height: 302px;
+                        margin-top: 54px;
+                        dt{
+                            width: 100%;
+                            height: 248px;
+                            text-align: center;
+                            img{
+                                height: 248px;
+                            }
+                        }
+                        dd{
+                            text-align: center;
+                            h2{
+                                font-size: 16px;
+                                font-weight: normal;
+                            }
+                            span{
+                                font-size: 12px;
+                                color: #f35c49;
+                            }
+                        }
+                    }
+                    .price{
+                        text-align: center;
+                        span{
+                            font-size: 16px;
+                            &:nth-child(1){
+                                font-weight: bold;
+                                color: #f35c49;
+                            }
+                            &:nth-child(2){
+                                font-size: 14px;
+                                color: #aaaaaa;
+                                text-decoration: line-through;
+                            }
+                        }
+                    }
+                    .hotfoot{
+                        width: 100%;
+                        text-align: center;
+                        a{
+                            font-size: 14px;
+                            display: inline-block;
+                            width: 116px;
+                            height: 34px;
+                            line-height: 34px;
+                            border-radius: 16px;
+                            &:nth-child(1){
+                                color: #f35c49;
+                                background: #FFFFFF;
+                            }
+                            &:nth-child(2){
+                                color: #FFFFFF;
+                                background: #f35c49;
+                            }
+                        }
+                    }
+                }
+            }
+        }
+        &:nth-child(1){
+            width: 100%;
+            height: 545px;
+        }
+        &:nth-child(2){
+            width: 100%;
+            height: 1471px;
+            .bigimg{
+                width: 100%;
+                height: 450px;
+                img{
+                    width: 100%;
+                    height: 100%;
+                }
+            }
+            .hot_box{
+                width: 100%;
+                height: 936px;
+                ul{
+                    li{
+                        height: 48%;
+                    }
+                }
+            }
+        }
+        &:nth-child(3){
+            width: 100%;
+            height: 1008px;
+            .hot_box{
+                height: 936px;
+                ul{
+                    li{
+                        height: 49%;
+                        &:nth-child(1){
+                            width: 49%;
+                            .reduce,.price,.hotfoot{
+                                display: none;
+                            }
+                            dl{
+                                width: 100%;
+                                height: 100%;
+                                margin-top: 0px;
+                                dt{
+                                    width: 100%;
+                                    height: 100%;
+                                    img{
+                                        width: 100%;
+                                        height: 100%;
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        }  
+    }
+}
+    
+    
+    
+
+   
