--- a/html/include/header.html
+++ b/html/include/header.html
@@ -1,38 +1,38 @@
 
 <div class="out">
-	<div class="logo"><a href="#"><img src="/images/logo.jpg"/></a></div>
+	<div class="logo"><a href="#"><img src="/mynubia/images/logo.jpg"/></a></div>
 	<ul class="guide">
-		<li><a href="/html/list.html">商城</a></li>
+		<li><a href="/mynubia/html/list.html">商城</a></li>
 		<li class="cellphone">手机
 			<div id="z17box">
 				<ul class="z17list">
 					<li>
 						<a href="#">
-							<img src="/images/149622421740.png"/>
+							<img src="/mynubia/images/149622421740.png"/>
 							<span>Z17S全面屏</span>
 						</a>
 					</li>
 					<li>
 						<a href="#">
-							<img src="/images/149622421740.png"/>
+							<img src="/mynubia/images/149622421740.png"/>
 							<span>Z17S全面屏</span>
 						</a>
 					</li>
 					<li>
 						<a href="#">
-							<img src="/images/149622421740.png"/>
+							<img src="/mynubia/images/149622421740.png"/>
 							<span>Z17S全面屏</span>
 						</a>
 					</li>
 					<li>
 						<a href="#">
-							<img src="/images/149622421740.png"/>
+							<img src="/mynubia/images/149622421740.png"/>
 							<span>Z17S全面屏</span>
 						</a>
 					</li>
 					<li>
 						<a href="#">
-							<img src="/images/149622421740.png"/>
+							<img src="/mynubia/images/149622421740.png"/>
 							<span>Z17S全面屏</span>
 						</a>
 					</li>
@@ -113,7 +113,7 @@
 				<ul>
 					<li>
 						<a href="#">
-							<img src="/images/nubiaui-logo.png"/>
+							<img src="/mynubia/images/nubiaui-logo.png"/>
 							<span>nubia UI 5.0</span>
 						</a>
 					</li>
@@ -144,7 +144,7 @@
 				</ul>
 			</div>
 		</li>
-		<li><a href="html/login.html"><i class="iconfont icon-wodeweixuanzhong"></i></a></li>
+		<li><a href="/mynubia/html/login.html"><i class="iconfont icon-wodeweixuanzhong"></i></a></li>
 	</ul>
 	<div class="cart">购物车<i class="iconfont icon-licai2"></i></div>
 </div>
