--- a/sass/login.scss
+++ b/sass/login.scss
@@ -12,7 +12,7 @@ body{
     padding-bottom: 80px;
     overflow: hidden;
     .logo{
-        background: url(/images/login_logo.jpg) no-repeat;
+        background: url(/mynubia/images/login_logo.jpg) no-repeat;
         background-size: 100% 100%;
         width: 156px;
         height: 25px;
@@ -58,7 +58,7 @@ body{
                     }
                     span{
                         position: absolute;
-                        right: -80px;
+                        right: -140px;
                         top: 0;
                         color: #FF0000;
                     }
@@ -112,7 +112,7 @@ body{
                     }
                     >span{
                         position: absolute;
-                        right: -92px;
+                        right: -140px;
                         top: 0;
                     }
                 }
@@ -131,6 +131,10 @@ body{
                         position: absolute;
                         top: 0;
                         right: 0;
+                        img{
+                            width: 100%;
+                            height: 100%;
+                        }
                     }
                     span{
                         position: absolute;
