--- a/sass/register.scss
+++ b/sass/register.scss
@@ -11,7 +11,7 @@ body{
     padding-bottom: 80px;
     overflow: hidden;
     .logo{
-        background: url(/images/login_logo.jpg) no-repeat;
+        background: url(/mynubia/images/login_logo.jpg) no-repeat;
         background-size: 100% 100%;
         width: 156px;
         height: 25px;
@@ -79,6 +79,10 @@ body{
                         position: absolute;
                         top: 0;
                         right: 0;
+                        img{
+                            width: 100%;
+                            height: 100%;
+                        }
                     }
                     >span{
                         position: absolute;
