--- a/html/include/header.html
+++ b/html/include/header.html
@@ -1,6 +1,6 @@
 
 <div class="out">
-	<div class="logo"><a href="#"><img src="/mynubia/images/logo.jpg"/></a></div>
+	<div class="logo"><a href="/mynubia/index.html"><img src="/mynubia/images/logo.jpg"/></a></div>
 	<ul class="guide">
 		<li><a href="/mynubia/html/list.html">商城</a></li>
 		<li class="cellphone">手机
@@ -144,7 +144,7 @@
 				</ul>
 			</div>
 		</li>
-		<li><a href="/mynubia/html/login.html"><i class="iconfont icon-wodeweixuanzhong"></i></a></li>
+		<li id="personal"><a href="/mynubia/html/login.html"><i class="iconfont icon-wodeweixuanzhong"></i></a></li>
 	</ul>
 	<div class="cart">购物车<i class="iconfont icon-licai2"></i></div>
 </div>
